--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "pflynn.quick.import",
+    "name": "pflynn.vitro.quick.import",
     "title": "Quick Require Import",
     "homepage": "https://github.com/peterflynn/quick-import",
     "author": "Peter Flynn",
     "version": "1.0.5",
     "engines": { "brackets": ">=0.34" },
     "description": "Shortcut for generating require() imports. Press Ctrl+I (\u2318I on Mac) and type a filename to insert a require() at the top of your file - in an existing block if available, with '='s nicely aligned.",
-    "keywords": ["RequireJS", "CommonJS"]
+    "keywords": ["RequireJS", "CommonJS", "ES6"]
 }
